--- a/gym.html
+++ b/gym.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang = "en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" ontent="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Anytime fitness</title>
+  </head>
+<body>
 
+  
+
+<header>
+
+  <a href="#home" class="logo">Anytime <span>Fitness</span></a>
+
+  <ul class="navbar">
+    <li><a href = "#home">Home</a></li>
+    <li><a href="#services">Services</a></li>
+    <li><a href="#about">About Us</a></li>
+    <li><a href="#plans">Pricing</a></li>
+    <li><a href="#review">Review</a></li>
+</header>
